# yokushi

./: CLAUDE.md  Cargo.toml  README.md  SECURITY.md  config.example.yaml  flake.nix  skills-lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml
5c/fda15005ee/: metadata.json
5c/fda15005ee/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
89/00dce42064/: metadata.json
89/00dce42064/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
ce/c52759d121/: metadata.json
ce/c52759d121/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
e3/c4babb70dd/: metadata.json
e3/c4babb70dd/0/: content_hash.txt  full.jsonl  metadata.json
ef/ddd0007fdb/: metadata.json
ef/ddd0007fdb/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
fe/0328597b1f/: metadata.json
fe/0328597b1f/0/: content_hash.txt  context.md  full.jsonl  metadata.json
src/: config.rs  hook.rs  main.rs  matcher.rs  output.rs
